--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -30,8 +30,7 @@
     @include span(2 of 12 last);
     opacity: 1;
     border-left: 1px solid #000;
-    margin-left: 1.5em;
-    padding-left: 2em;
+    padding-left: 2.5em;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
 
